--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,3 +9,8 @@ body {
     font-size: 50px;
     color: #fff;
 }
+
+.link--cta {    /* cta = call to action */
+   font-size: 16px;
+   color: aquamarine;
+}
