--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,13 +4,29 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* HEADINGS */
+
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: #fff;
 }
 
+.header--secondary {
+    font-weight: 300;
+    font-size: 42px;
+    color: #fff;
+}
+
+.header--subheader {
+    font-size: 21px;
+    color: gray;
+}
+
+/* LINKS */
+
 .link--cta {    /* cta = call to action */
    font-size: 16px;
    color: aquamarine;
 }
+
